--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-transition-group": "^4.4.1",
+    "aws-amplify": "^4.0.3",
     "primeicons": "^4.1.0",
     "primereact": "^6.3.2",
     "react": "^17.0.2",
